ProyectoSICXE/Gram_SICXEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.1 C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g 2025-03-04 15:33:16

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.1")]
[System.CLSCompliant(false)]
public partial class Gram_SICXEParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT", "BASE", "BYTE", "CHCONST", "CONSTCAD", "CONSTHEX", "DIR", "END", "F1CODOP", "F1_INSTR", "F2CODOP", "F2_INSTR", "F34CODOP", "F34_INSTR", "FINL", "HEXCONST", "HEXSUF", "ID", "INDICE", "INSTR", "NUM", "NUMERAL", "PLUS", "REG", "RESB", "RESW", "START", "WORD", "WS", "','"
	};
	public const int EOF=-1;
	public const int T__33=33;
	public const int AT=4;
	public const int BASE=5;
	public const int BYTE=6;
	public const int CHCONST=7;
	public const int CONSTCAD=8;
	public const int CONSTHEX=9;
	public const int DIR=10;
	public const int END=11;
	public const int F1CODOP=12;
	public const int F1_INSTR=13;
	public const int F2CODOP=14;
	public const int F2_INSTR=15;
	public const int F34CODOP=16;
	public const int F34_INSTR=17;
	public const int FINL=18;
	public const int HEXCONST=19;
	public const int HEXSUF=20;
	public const int ID=21;
	public const int INDICE=22;
	public const int INSTR=23;
	public const int NUM=24;
	public const int NUMERAL=25;
	public const int PLUS=26;
	public const int REG=27;
	public const int RESB=28;
	public const int RESW=29;
	public const int START=30;
	public const int WORD=31;
	public const int WS=32;

	public Gram_SICXEParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public Gram_SICXEParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return Gram_SICXEParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_programa();
	partial void LeaveRule_programa();
	// $ANTLR start "programa"
	// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:17:8: public programa : inicio proposiciones fin ( FINL )? EOF ;
	[GrammarRule("programa")]
	public AstParserRuleReturnScope<object, IToken> programa()
	{
		EnterRule_programa();
		EnterRule("programa", 1);
		TraceIn("programa", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken FINL4 = default(IToken);
		IToken EOF5 = default(IToken);
		AstParserRuleReturnScope<object, IToken> inicio1 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> proposiciones2 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> fin3 = default(AstParserRuleReturnScope<object, IToken>);

		object FINL4_tree = default(object);
		object EOF5_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "programa");
		DebugLocation(17, 4);
		try
		{
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:19:5: ( inicio proposiciones fin ( FINL )? EOF )
			DebugEnterAlt(1);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:19:7: inicio proposiciones fin ( FINL )? EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(19, 7);
			PushFollow(Follow._inicio_in_programa73);
			inicio1=inicio();
			PopFollow();

			adaptor.AddChild(root_0, inicio1.Tree);
			DebugLocation(19, 14);
			PushFollow(Follow._proposiciones_in_programa75);
			proposiciones2=proposiciones();
			PopFollow();

			adaptor.AddChild(root_0, proposiciones2.Tree);
			DebugLocation(19, 28);
			PushFollow(Follow._fin_in_programa77);
			fin3=fin();
			PopFollow();

			adaptor.AddChild(root_0, fin3.Tree);
			DebugLocation(19, 32);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:19:32: ( FINL )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==FINL))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:19:33: FINL
				{
				DebugLocation(19, 33);
				FINL4=(IToken)Match(input,FINL,Follow._FINL_in_programa80); 
				FINL4_tree = (object)adaptor.Create(FINL4);
				adaptor.AddChild(root_0, FINL4_tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(19, 40);
			EOF5=(IToken)Match(input,EOF,Follow._EOF_in_programa84); 
			EOF5_tree = (object)adaptor.Create(EOF5);
			adaptor.AddChild(root_0, EOF5_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("programa", 1);
			LeaveRule("programa", 1);
			LeaveRule_programa();
		}
		DebugLocation(20, 4);
		} finally { DebugExitRule(GrammarFileName, "programa"); }
		return retval;

	}
	// $ANTLR end "programa"

	partial void EnterRule_inicio();
	partial void LeaveRule_inicio();
	// $ANTLR start "inicio"
	// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:23:1: inicio : ( raiz | proposicion );
	[GrammarRule("inicio")]
	private AstParserRuleReturnScope<object, IToken> inicio()
	{
		EnterRule_inicio();
		EnterRule("inicio", 2);
		TraceIn("inicio", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> raiz6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> proposicion7 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "inicio");
		DebugLocation(23, 4);
		try
		{
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:24:5: ( raiz | proposicion )
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==ID))
			{
				int LA2_2 = input.LA(2);

				if ((LA2_2==START))
				{
					alt2 = 1;
				}
				else if (((LA2_2>=BASE && LA2_2<=BYTE)||LA2_2==F1CODOP||LA2_2==F2CODOP||LA2_2==F34CODOP||LA2_2==PLUS||(LA2_2>=RESB && LA2_2<=RESW)||LA2_2==WORD))
				{
					alt2 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else if (((LA2_1>=BASE && LA2_1<=BYTE)||LA2_1==F1CODOP||LA2_1==F2CODOP||LA2_1==F34CODOP||LA2_1==PLUS||(LA2_1>=RESB && LA2_1<=RESW)||LA2_1==WORD))
			{
				alt2 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:24:7: raiz
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(24, 7);
				PushFollow(Follow._raiz_in_inicio102);
				raiz6=raiz();
				PopFollow();

				adaptor.AddChild(root_0, raiz6.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:25:7: proposicion
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(25, 7);
				PushFollow(Follow._proposicion_in_inicio110);
				proposicion7=proposicion();
				PopFollow();

				adaptor.AddChild(root_0, proposicion7.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("inicio", 2);
			LeaveRule("inicio", 2);
			LeaveRule_inicio();
		}
		DebugLocation(26, 4);
		} finally { DebugExitRule(GrammarFileName, "inicio"); }
		return retval;

	}
	// $ANTLR end "inicio"

	partial void EnterRule_raiz();
	partial void LeaveRule_raiz();
	// $ANTLR start "raiz"
	// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:28:1: raiz : et= etiqueta s= START v= ( NUM | HEXSUF )? FINL -> ^( DIR $et $s ( $v)? ) ;
	[GrammarRule("raiz")]
	private AstParserRuleReturnScope<object, IToken> raiz()
	{
		EnterRule_raiz();
		EnterRule("raiz", 3);
		TraceIn("raiz", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken s = default(IToken);
		IToken v = default(IToken);
		IToken FINL8 = default(IToken);
		AstParserRuleReturnScope<object, IToken> et = default(AstParserRuleReturnScope<object, IToken>);

		object s_tree = default(object);
		object v_tree = default(object);
		object FINL8_tree = default(object);
		RewriteRuleITokenStream stream_FINL=new RewriteRuleITokenStream(adaptor,"token FINL");
		RewriteRuleITokenStream stream_NUM=new RewriteRuleITokenStream(adaptor,"token NUM");
		RewriteRuleITokenStream stream_START=new RewriteRuleITokenStream(adaptor,"token START");
		RewriteRuleITokenStream stream_HEXSUF=new RewriteRuleITokenStream(adaptor,"token HEXSUF");
		RewriteRuleSubtreeStream stream_etiqueta=new RewriteRuleSubtreeStream(adaptor,"rule etiqueta");
		try { DebugEnterRule(GrammarFileName, "raiz");
		DebugLocation(28, 4);
		try
		{
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:29:5: (et= etiqueta s= START v= ( NUM | HEXSUF )? FINL -> ^( DIR $et $s ( $v)? ) )
			DebugEnterAlt(1);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:29:7: et= etiqueta s= START v= ( NUM | HEXSUF )? FINL
			{
			DebugLocation(29, 9);
			PushFollow(Follow._etiqueta_in_raiz129);
			et=etiqueta();
			PopFollow();

			stream_etiqueta.Add(et.Tree);
			DebugLocation(29, 20);
			s=(IToken)Match(input,START,Follow._START_in_raiz133);  
			stream_START.Add(s);

			DebugLocation(29, 28);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:29:29: ( NUM | HEXSUF )?
			int alt3=3;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==NUM))
			{
				alt3 = 1;
			}
			else if ((LA3_1==HEXSUF))
			{
				alt3 = 2;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:29:30: NUM
				{
				DebugLocation(29, 30);
				v=(IToken)Match(input,NUM,Follow._NUM_in_raiz138);  
				stream_NUM.Add(v);


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:29:36: HEXSUF
				{
				DebugLocation(29, 36);
				v=(IToken)Match(input,HEXSUF,Follow._HEXSUF_in_raiz142);  
				stream_HEXSUF.Add(v);


				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(29, 45);
			FINL8=(IToken)Match(input,FINL,Follow._FINL_in_raiz146);  
			stream_FINL.Add(FINL8);



			{
			// AST REWRITE
			// elements: et, v, s
			// token labels: s, v
			// rule labels: retval, et
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleITokenStream stream_s=new RewriteRuleITokenStream(adaptor,"token s",s);
			RewriteRuleITokenStream stream_v=new RewriteRuleITokenStream(adaptor,"token v",v);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
			RewriteRuleSubtreeStream stream_et=new RewriteRuleSubtreeStream(adaptor,"rule et",et!=null?et.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 30:7: -> ^( DIR $et $s ( $v)? )
			{
				DebugLocation(30, 10);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:30:10: ^( DIR $et $s ( $v)? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(30, 12);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(DIR, "DIR"), root_1);

				DebugLocation(30, 17);
				adaptor.AddChild(root_1, stream_et.NextTree());
				DebugLocation(30, 21);
				adaptor.AddChild(root_1, stream_s.NextNode());
				DebugLocation(30, 24);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:30:24: ( $v)?
				if (stream_v.HasNext)
				{
					DebugLocation(30, 24);
					adaptor.AddChild(root_1, stream_v.NextNode());

				}
				stream_v.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("raiz", 3);
			LeaveRule("raiz", 3);
			LeaveRule_raiz();
		}
		DebugLocation(31, 4);
		} finally { DebugExitRule(GrammarFileName, "raiz"); }
		return retval;

	}
	// $ANTLR end "raiz"

	partial void EnterRule_fin();
	partial void LeaveRule_fin();
	// $ANTLR start "fin"
	// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:33:1: fin : e= END ent= entrada ( FINL )? -> ^( INSTR $e ( $ent)? ) ;
	[GrammarRule("fin")]
	private AstParserRuleReturnScope<object, IToken> fin()
	{
		EnterRule_fin();
		EnterRule("fin", 4);
		TraceIn("fin", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken e = default(IToken);
		IToken FINL9 = default(IToken);
		AstParserRuleReturnScope<object, IToken> ent = default(AstParserRuleReturnScope<object, IToken>);

		object e_tree = default(object);
		object FINL9_tree = default(object);
		RewriteRuleITokenStream stream_FINL=new RewriteRuleITokenStream(adaptor,"token FINL");
		RewriteRuleITokenStream stream_END=new RewriteRuleITokenStream(adaptor,"token END");
		RewriteRuleSubtreeStream stream_entrada=new RewriteRuleSubtreeStream(adaptor,"rule entrada");
		try { DebugEnterRule(GrammarFileName, "fin");
		DebugLocation(33, 4);
		try
		{
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:35:5: (e= END ent= entrada ( FINL )? -> ^( INSTR $e ( $ent)? ) )
			DebugEnterAlt(1);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:35:7: e= END ent= entrada ( FINL )?
			{
			DebugLocation(35, 8);
			e=(IToken)Match(input,END,Follow._END_in_fin192);  
			stream_END.Add(e);

			DebugLocation(35, 16);
			PushFollow(Follow._entrada_in_fin196);
			ent=entrada();
			PopFollow();

			stream_entrada.Add(ent.Tree);
			DebugLocation(35, 25);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:35:25: ( FINL )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==FINL))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:35:26: FINL
				{
				DebugLocation(35, 26);
				FINL9=(IToken)Match(input,FINL,Follow._FINL_in_fin199);  
				stream_FINL.Add(FINL9);


				}
				break;

			}
			} finally { DebugExitSubRule(4); }



			{
			// AST REWRITE
			// elements: ent, e
			// token labels: e
			// rule labels: ent, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleITokenStream stream_e=new RewriteRuleITokenStream(adaptor,"token e",e);
			RewriteRuleSubtreeStream stream_ent=new RewriteRuleSubtreeStream(adaptor,"rule ent",ent!=null?ent.Tree:null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 36:7: -> ^( INSTR $e ( $ent)? )
			{
				DebugLocation(36, 10);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:36:10: ^( INSTR $e ( $ent)? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(36, 12);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(INSTR, "INSTR"), root_1);

				DebugLocation(36, 19);
				adaptor.AddChild(root_1, stream_e.NextNode());
				DebugLocation(36, 22);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:36:22: ( $ent)?
				if (stream_ent.HasNext)
				{
					DebugLocation(36, 22);
					adaptor.AddChild(root_1, stream_ent.NextTree());

				}
				stream_ent.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("fin", 4);
			LeaveRule("fin", 4);
			LeaveRule_fin();
		}
		DebugLocation(37, 4);
		} finally { DebugExitRule(GrammarFileName, "fin"); }
		return retval;

	}
	// $ANTLR end "fin"

	partial void EnterRule_entrada();
	partial void LeaveRule_entrada();
	// $ANTLR start "entrada"
	// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:39:1: entrada : ( ID )? ;
	[GrammarRule("entrada")]
	private AstParserRuleReturnScope<object, IToken> entrada()
	{
		EnterRule_entrada();
		EnterRule("entrada", 5);
		TraceIn("entrada", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID10 = default(IToken);

		object ID10_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "entrada");
		DebugLocation(39, 4);
		try
		{
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:40:5: ( ( ID )? )
			DebugEnterAlt(1);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:40:7: ( ID )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(40, 7);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:40:7: ( ID )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_1 = input.LA(1);

			if ((LA5_1==ID))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:40:7: ID
				{
				DebugLocation(40, 7);
				ID10=(IToken)Match(input,ID,Follow._ID_in_entrada237); 
				ID10_tree = (object)adaptor.Create(ID10);
				adaptor.AddChild(root_0, ID10_tree);

				}
				break;

			}
			} finally { DebugExitSubRule(5); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("entrada", 5);
			LeaveRule("entrada", 5);
			LeaveRule_entrada();
		}
		DebugLocation(41, 4);
		} finally { DebugExitRule(GrammarFileName, "entrada"); }
		return retval;

	}
	// $ANTLR end "entrada"

	partial void EnterRule_proposiciones();
	partial void LeaveRule_proposiciones();
	// $ANTLR start "proposiciones"
	// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:44:1: proposiciones : ( proposicion )+ ;
	[GrammarRule("proposiciones")]
	private AstParserRuleReturnScope<object, IToken> proposiciones()
	{
		EnterRule_proposiciones();
		EnterRule("proposiciones", 6);
		TraceIn("proposiciones", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> proposicion11 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "proposiciones");
		DebugLocation(44, 4);
		try
		{
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:45:5: ( ( proposicion )+ )
			DebugEnterAlt(1);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:45:7: ( proposicion )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(45, 7);
			// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:45:7: ( proposicion )+
			int cnt6=0;
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if (((LA6_1>=BASE && LA6_1<=BYTE)||LA6_1==F1CODOP||LA6_1==F2CODOP||LA6_1==F34CODOP||LA6_1==ID||LA6_1==PLUS||(LA6_1>=RESB && LA6_1<=RESW)||LA6_1==WORD))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch (alt6)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\dev\\SW\\Practica 01 Calculadora\\Gram_SICXE.g:45:8: proposicion
					{
					DebugLocation(45, 8);
					PushFollow(Follow._proposicion_in_proposiciones257);
					proposicion11=proposicion();
					PopFollow();

					adaptor.AddChild(root_0, proposicion11.Tree);

					}
					break;

				default:
					if (cnt6 >= 1)
						goto loop6;

					EarlyExitException eee6 = new EarlyExitException( 6, input );
					DebugRecognitionException(eee6);
					throw eee6;
				}
				cnt6++;
			}
			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

			retval.Stop = (IToken)input.LT(-1);
